Fix spacing, change to monospace font, remove dividers and duplicate text

--- a/_sass/basic.sass
+++ b/_sass/basic.sass
@@ -22,8 +22,7 @@ a
     box-shadow: 0 2px
 
 hr
-  border: 1px solid gray(100)
-  margin: 2em 0
+  display: none
 
 blockquote
   background: gray(10)
