--- a/_sass/layout.sass
+++ b/_sass/layout.sass
@@ -40,3 +40,8 @@ header h1
 
 article, main
   flex-grow: 1
+  margin: 0
+  padding: 0
+
+article p
+  margin: 0.5em 0
