--- a/_sass/utils.sass
+++ b/_sass/utils.sass
@@ -1,6 +1,6 @@
 $font-size: calc(0.8rem + 0.2vw) !default
-$font-family: "PT Sans", system-ui, sans-serif !default
-$line-height: 1.6 !default
+$font-family: "Courier New", "Monaco", "Consolas", "Fira Code", monospace !default
+$line-height: 1.4 !default
 $link: light-dark(#46f, #38f) !default
 $highlight: #f08 !default
 
