--- a/assets/css/frame.sass
+++ b/assets/css/frame.sass
@@ -8,12 +8,16 @@ body
   background: light(93, 16)
   padding: 0 calc(38% - 22rem)
 
+article
+  margin: 0
+  padding: 0.5em 0
+
 body > *
   background: light(100)
   background: light(100, 17)
   color: light(0, 100)
-  padding: 1.75em calc(22% - 6rem)
-  padding: clamp(1.5em, 4vw, 1.75em) max(1.5em, 22% - 6rem)
+  padding: 1em calc(22% - 6rem)
+  padding: clamp(0.8em, 3vw, 1em) max(1em, 22% - 6rem)
   box-shadow: 0 -1px gray(10) inset, 0 0 1em light-dark(gray(10), transparent), 0 0 0 1px light-dark(transparent, light(26))
 
 body > header, body > footer
